--- a/ex005/index.html
+++ b/ex005/index.html
@@ -4,13 +4,99 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Números</title>
+  <style>
+    *{
+      padding: 0%;
+      margin: 0%;
+    }
+    body{
+      font-family: Arial, Helvetica, sans-serif;
+      overflow: hidden;
+    }
+    main{
+      height: 100vh;
+      width: 100vw;
+      display: flex;
+      flex-wrap: nowrap;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+    main h1{
+      margin-bottom: 15px;
+    }
+    main h3{
+      margin-bottom: 20px;
+    }
+    input{
+      background-color: rgb(230, 230, 230);
+    
+      margin-right: 15px;
+      border-radius: 5px;
+      padding: 10px;
+      border: none;
+      outline: none;
+
+      appearance: textfield;
+      -moz-appearance: textfield;
+    }
+    input::-webkit-inner-spin-button{
+      -webkit-appearance: none;
+    }
+    #novoInput{
+      width: 93%;
+      border: 1px solid rgb(172, 172, 172);
+      border-radius: 5px;
+      grid-column: 1/3;
+    }
+    button{
+      font-weight: bold;
+      text-transform: uppercase;
+      border: none;
+      padding: 5px;
+      background-color: rgb(197, 197, 197);
+      border-radius: 10px;
+      cursor: pointer;
+    }
+    button:hover{
+      background-color: rgb(135, 12, 12);
+      color: white;
+    }
+    div#numeros{
+    /* width: 500px; */
+    /* height: 500px; */
+    display: grid;
+    grid-template-columns: repeat(2, 150px);
+    /* grid-template-rows: repeat(2, 0px); */
+    margin-top: 20px;
+    gap: 5px;
+    align-content: stretch;
+    }
+    label{
+      font-weight: bold;
+      grid-column: 1/2;
+    }
+    #novoBotao{
+      justify-items: center;
+      margin-top: 5px;
+      width: 100px;
+      text-align: center;
+      grid-column: 2/3;
+    }
+    #resultadoSoma{
+      grid-column: 1/3;
+      padding: 20px;
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
   <main>
-    <h3>Adicione 3 numeros:</h3>
+    <h1>Soma de números</h1>
+    <h3>Insira quantos números deseja:</h3>
     <form action="">
       <input type="number" name="" id="num" placeholder="Número">
-      <button type="button" id="botao" onclick="confirmar()">Confirmar</button>
+      <button type="submit" id="botao" onclick="confirmar(event)">Confirmar</button>
     </form>
     <div id="numeros">
     </div>
